# sm213_editor

./: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  justfile  readme.md
.github/workflows/: ci.yml
sm213_editor/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
sm213_editor/src/: main.ts
sm213_parser_wasm/: Cargo.toml
sm213_parser_wasm/src/: lib.rs
src/: app.rs  main.rs
