[package]
name = "sm213_editor"
version = "0.1.0"
authors = ["Gabeperson"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     
    "default_fonts", 
    "glow",          
    "persistence",   
] }
log = "0.4"
sm213_parser = { git = "https://github.com/Gabeperson/sm213_parser.git" }

serde = { version = "1", features = ["derive"] }
logos = "0.14.2"
oneshot = "0.1.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = "z"
lto = true

[profile.dev.package."*"]
opt-level = 2
